force-app/main/default/objects/KPI__c/KPI__c.object-meta.xml
<CustomObject>
    <label>KPI</label>
    <nameField>
        <displayFormat>KPI-{000000000}</displayFormat>
        <label>KPI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPI</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>