force-app/main/default/objects/KPI__c/fields/Activity_status__c.field-meta.xml
<CustomField>
    <fullName>Activity_status__c</fullName>
    <description>Customer&apos;s activity status (e.g. active, sleeping, inactive) looking at purchase data</description>
    <label>Activity status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>