force-app/main/default/objects/KPI__c/fields/Actual_Cluster__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cluster__c</fullName>
    <label>Actual Cluster</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>