force-app/main/default/objects/KPI__c/fields/Actual_Cluster_Date_From__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cluster_Date_From__c</fullName>
    <label>Actual Cluster Date From</label>
    <type>DateTime</type>
</CustomField>