force-app/main/default/objects/KPI__c/fields/Actual_Cluster_Date_To__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cluster_Date_To__c</fullName>
    <label>Actual Cluster Date To</label>
    <type>DateTime</type>
</CustomField>