force-app/main/default/objects/KPI__c/fields/Average_order_value_historical__c.field-meta.xml
<CustomField>
    <fullName>Average_order_value_historical__c</fullName>
    <description>Average historical order value of the customer</description>
    <label>Average order value historical</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>