force-app/main/default/objects/KPI__c/fields/Average_order_value_last_12_months__c.field-meta.xml
<CustomField>
    <fullName>Average_order_value_last_12_months__c</fullName>
    <description>Average order value of transactions done by the customer in the last 12 months</description>
    <label>Average order value last 12 months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>