force-app/main/default/objects/KPI__c/fields/Average_order_value_LY__c.field-meta.xml
<CustomField>
    <fullName>Average_order_value_LY__c</fullName>
    <description>Average order value of transactions done by the customer in the last year</description>
    <label>Average order value LY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>