force-app/main/default/objects/KPI__c/fields/AVG_AUR__c.field-meta.xml
<CustomField>
    <fullName>AVG_AUR__c</fullName>
    <description>Sum of net amount (no VAT) divided by the sum of net quantity sold</description>
    <label>AVG AUR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>