force-app/main/default/objects/KPI__c/fields/Behavioural_segment__c.field-meta.xml
<CustomField>
    <fullName>Behavioural_segment__c</fullName>
    <description>Customer segment according to behavioural segmentation</description>
    <label>Behavioural segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>