force-app/main/default/objects/KPI__c/fields/Calculated_Preferred_Store_Date__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Preferred_Store_Date__c</fullName>
    <label>Calculated Preferred Store Date</label>
    <type>DateTime</type>
</CustomField>