force-app/main/default/objects/KPI__c/fields/Click_rate__c.field-meta.xml
<CustomField>
    <fullName>Click_rate__c</fullName>
    <description>N. clicks/n. received email by customer</description>
    <label>Click rate</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>