force-app/main/default/objects/KPI__c/fields/Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Type__c</fullName>
    <description>Rules that determine if the customer purchase in specific channels.</description>
    <label>Client Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>