force-app/main/default/objects/KPI__c/fields/Clienteling_activities_conversion_score__c.field-meta.xml
<CustomField>
    <fullName>Clienteling_activities_conversion_score__c</fullName>
    <description>Score representing the level of conversions of the customer related to clienteling activities</description>
    <label>Clienteling activities conversion score</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>