force-app/main/default/objects/KPI__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>KPI2</relationshipLabel>
    <relationshipName>KPI</relationshipName>
    <type>Lookup</type>
</CustomField>