force-app/main/default/objects/KPI__c/fields/CSAT__c.field-meta.xml
<CustomField>
    <fullName>CSAT__c</fullName>
    <description>Customer Satisfaction score of the customer</description>
    <label>CSAT</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>