force-app/main/default/objects/KPI__c/fields/Date_of_first_purchase__c.field-meta.xml
<CustomField>
    <fullName>Date_of_first_purchase__c</fullName>
    <description>Date of first purchase of the customer</description>
    <label>Date of first purchase</label>
    <type>Date</type>
</CustomField>