force-app/main/default/objects/KPI__c/fields/Date_of_last_purchase__c.field-meta.xml
<CustomField>
    <fullName>Date_of_last_purchase__c</fullName>
    <description>Date of last purchase of the customer</description>
    <label>Date of last purchase</label>
    <type>Date</type>
</CustomField>