force-app/main/default/objects/KPI__c/fields/Do_not_disturb_rule__c.field-meta.xml
<CustomField>
    <fullName>Do_not_disturb_rule__c</fullName>
    <description>Rules that determine when customers should not be contacted (e.g., to avoid excessive contact)</description>
    <label>Do not disturb rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>