force-app/main/default/objects/KPI__c/fields/eComm_first_purchase_date__c.field-meta.xml
<CustomField>
    <fullName>eComm_first_purchase_date__c</fullName>
    <description>First purchase date of the customer in the eCommerce</description>
    <label>eComm first purchase date</label>
    <type>Date</type>
</CustomField>