force-app/main/default/objects/KPI__c/fields/eComm_last_purchase_date__c.field-meta.xml
<CustomField>
    <fullName>eComm_last_purchase_date__c</fullName>
    <description>Last purchase date of the customer in the eCommerce</description>
    <label>eComm last purchase date</label>
    <type>Date</type>
</CustomField>