force-app/main/default/objects/KPI__c/fields/eComm_preferred_shipping_country__c.field-meta.xml
<CustomField>
    <fullName>eComm_preferred_shipping_country__c</fullName>
    <description>Preferred shipping country in the eCommerce looking at the his previous purchase history</description>
    <label>eComm preferred shipping country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>