force-app/main/default/objects/KPI__c/fields/Email_click_rate__c.field-meta.xml
<CustomField>
    <fullName>Email_click_rate__c</fullName>
    <description>n. open emails/ n. received emails by customer</description>
    <label>Email click rate</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>