force-app/main/default/objects/KPI__c/fields/Engagement_segment__c.field-meta.xml
<CustomField>
    <fullName>Engagement_segment__c</fullName>
    <description>Customer segment according to engagement segmentation</description>
    <label>Engagement segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>