force-app/main/default/objects/KPI__c/fields/First_Purchase__c.field-meta.xml
<CustomField>
    <fullName>First_Purchase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Purchase</label>
    <type>Checkbox</type>
</CustomField>