force-app/main/default/objects/KPI__c/fields/High_price_point_products_rate__c.field-meta.xml
<CustomField>
    <fullName>High_price_point_products_rate__c</fullName>
    <description>Percentage of high-priced products purchased by the customer compared to his own total purchased products</description>
    <label>% of high price-point products</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>