force-app/main/default/objects/KPI__c/fields/Historical_Avg_Transaction_Base__c.field-meta.xml
<CustomField>
    <fullName>Historical_Avg_Transaction_Base__c</fullName>
    <description>Value of the Historical Avg. 
Transaction in base currency.</description>
    <label>Historical Avg. Transaction (Base)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>