force-app/main/default/objects/KPI__c/fields/Historical_Total_amount_Base__c.field-meta.xml
<CustomField>
    <fullName>Historical_Total_amount_Base__c</fullName>
    <description>Value of the Historical Total amount in base currency.</description>
    <label>Historical Total amount (Base)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>