force-app/main/default/objects/KPI__c/fields/Items_Discount_rate__c.field-meta.xml
<CustomField>
    <fullName>Items_Discount_rate__c</fullName>
    <description>The sum of net quantity sold where discount amount &gt; 0, divided by the total sum of net quantity sold</description>
    <label>% Items Discount</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>