force-app/main/default/objects/KPI__c/fields/Items_purchased_with_discounts_rate__c.field-meta.xml
<CustomField>
    <fullName>Items_purchased_with_discounts_rate__c</fullName>
    <description>Percentage of items purchased with discounts compared to the total, by customer</description>
    <label>% Items purchased with discounts</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>