force-app/main/default/objects/KPI__c/fields/Items_quantity_last_12_months__c.field-meta.xml
<CustomField>
    <fullName>Items_quantity_last_12_months__c</fullName>
    <description>Total number of items purchased by the customer in the last 12 months</description>
    <label>Items quantity last 12 months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>