force-app/main/default/objects/KPI__c/fields/Items_quantity_LY__c.field-meta.xml
<CustomField>
    <fullName>Items_quantity_LY__c</fullName>
    <description>Total number of items purchased by the customer in the last year</description>
    <label>Items quantity LY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>