force-app/main/default/objects/KPI__c/fields/Last_Date_Included_in_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_Included_in_Campaign__c</fullName>
    <description>Shows the date when the contact was last included in a marketing campaign or quick campaign.</description>
    <label>Last Date Included in Campaign</label>
    <type>DateTime</type>
</CustomField>