force-app/main/default/objects/KPI__c/fields/Lock_Type__c.field-meta.xml
<CustomField>
    <fullName>Lock_Type__c</fullName>
    <label>Lock Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>