force-app/main/default/objects/KPI__c/fields/N_different_categories__c.field-meta.xml
<CustomField>
    <fullName>N_different_categories__c</fullName>
    <description>Number of different product categories purchased</description>
    <label>N. different categories</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>