force-app/main/default/objects/KPI__c/fields/N_open_complaints__c.field-meta.xml
<CustomField>
    <fullName>N_open_complaints__c</fullName>
    <description>Number of open complaints opened by the customer with a current pending resolution</description>
    <label>N. open complaints</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>