force-app/main/default/objects/KPI__c/fields/Number_of_transactions_last_12_months__c.field-meta.xml
<CustomField>
    <fullName>Number_of_transactions_last_12_months__c</fullName>
    <description>Total number of transactions overall done by the customer (excluding returns)</description>
    <label>Number of transactions last 12 months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>