force-app/main/default/objects/KPI__c/fields/Old_cluster__c.field-meta.xml
<CustomField>
    <fullName>Old_cluster__c</fullName>
    <label>Old cluster</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>