force-app/main/default/objects/KPI__c/fields/Old_Cluster_Date_From__c.field-meta.xml
<CustomField>
    <fullName>Old_Cluster_Date_From__c</fullName>
    <label>Old Cluster Date From</label>
    <type>DateTime</type>
</CustomField>