force-app/main/default/objects/KPI__c/fields/Old_Cluster_Date_To__c.field-meta.xml
<CustomField>
    <fullName>Old_Cluster_Date_To__c</fullName>
    <label>Old Cluster Date To</label>
    <type>DateTime</type>
</CustomField>