force-app/main/default/objects/KPI__c/fields/Pref_communication_channel_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Pref_communication_channel_Calculated__c</fullName>
    <label>Pref.communication channel Calculated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>