force-app/main/default/objects/KPI__c/fields/Preferred_gender_product__c.field-meta.xml
<CustomField>
    <fullName>Preferred_gender_product__c</fullName>
    <description>Customer&apos;s preferred generd product looking at historical purchase data</description>
    <label>Preferred gender product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>