force-app/main/default/objects/KPI__c/fields/Preferred_product_category__c.field-meta.xml
<CustomField>
    <fullName>Preferred_product_category__c</fullName>
    <description>Customer&apos;s preferred purchasing category (e.g. shoes, bags..) looking at historical purchase data</description>
    <label>Preferred product category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>