force-app/main/default/objects/KPI__c/fields/Preferred_purchasing_channel_previous__c.field-meta.xml
<CustomField>
    <fullName>Preferred_purchasing_channel_previous__c</fullName>
    <label>Preferred purchasing channel	 previous</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Channel</valueSetName>
    </valueSet>
</CustomField>