force-app/main/default/objects/KPI__c/fields/Preferred_Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Sales_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Sales Person</label>
    <referenceTo>Sales_Assistant__c</referenceTo>
    <relationshipLabel>KPI</relationshipLabel>
    <relationshipName>KPI</relationshipName>
    <type>Lookup</type>
</CustomField>