force-app/main/default/objects/KPI__c/fields/Preferred_Season__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Season__c</fullName>
    <description>Preferred season of products according to previous purchases by the customer</description>
    <label>Preferred Season</label>
    <length>255</length>
    <type>Text</type>
</CustomField>