force-app/main/default/objects/KPI__c/fields/Preferred_Store__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>KPI</relationshipLabel>
    <relationshipName>KPI</relationshipName>
    <type>Lookup</type>
</CustomField>