force-app/main/default/objects/KPI__c/fields/Product_recommended__c.field-meta.xml
<CustomField>
    <fullName>Product_recommended__c</fullName>
    <description>Recommended products for the customer according to his past purchasing history/search behaviour</description>
    <label>Product recommended</label>
    <length>255</length>
    <type>Text</type>
</CustomField>