force-app/main/default/objects/KPI__c/fields/Profile_completion_rate__c.field-meta.xml
<CustomField>
    <fullName>Profile_completion_rate__c</fullName>
    <description>Level of complementation of the customer profile</description>
    <label>Profile completion rate</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>