force-app/main/default/objects/KPI__c/fields/Requests_client_service_last_12_months__c.field-meta.xml
<CustomField>
    <fullName>Requests_client_service_last_12_months__c</fullName>
    <description>Total number of requests opened by the customer at the customer care in the last 12 months</description>
    <label>Requests client service last 12 months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>