force-app/main/default/objects/KPI__c/fields/Returns_rate__c.field-meta.xml
<CustomField>
    <fullName>Returns_rate__c</fullName>
    <description>Percentage of returns made by the customer compared to his own total purchases</description>
    <label>% of returns</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>