force-app/main/default/objects/KPI__c/fields/RFM_Frequency__c.field-meta.xml
<CustomField>
    <fullName>RFM_Frequency__c</fullName>
    <description>Customer Frequency segment according to RFM segmentation</description>
    <label>RFM - Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>