force-app/main/default/objects/KPI__c/fields/RFM_General_State_Previous__c.field-meta.xml
<CustomField>
    <fullName>RFM_General_State_Previous__c</fullName>
    <label>RFM General State Previous</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RFM_General_State</valueSetName>
    </valueSet>
</CustomField>