force-app/main/default/objects/KPI__c/fields/RFM_Monetary__c.field-meta.xml
<CustomField>
    <fullName>RFM_Monetary__c</fullName>
    <description>Customer Monetary segment according to RFM segmentation</description>
    <label>RFM - Monetary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>