force-app/main/default/objects/KPI__c/fields/RFM_Monetary_State__c.field-meta.xml
<CustomField>
    <fullName>RFM_Monetary_State__c</fullName>
    <description>RFM Monetary Label of the customer according to the RFM segmentation</description>
    <label>RFM Monetary State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RFM_Monetary_State</valueSetName>
    </valueSet>
</CustomField>