force-app/main/default/objects/KPI__c/fields/RFM_Monetary_State_LTD__c.field-meta.xml
<CustomField>
    <fullName>RFM_Monetary_State_LTD__c</fullName>
    <label>RFM Monetary State LTD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RFM_Monetary_State</valueSetName>
    </valueSet>
</CustomField>