force-app/main/default/objects/KPI__c/fields/RFM_Recency__c.field-meta.xml
<CustomField>
    <fullName>RFM_Recency__c</fullName>
    <description>Customer Recency segment according to RFM segmentation</description>
    <label>RFM - Recency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>