force-app/main/default/objects/KPI__c/fields/RFM_Recency_State__c.field-meta.xml
<CustomField>
    <fullName>RFM_Recency_State__c</fullName>
    <description>RFM Recency label for lifetime duration of the customer according to the RFM segmentation</description>
    <label>RFM Recency State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RFM_Recency_State</valueSetName>
    </valueSet>
</CustomField>