force-app/main/default/objects/KPI__c/fields/RFM_Recency_State_LTD__c.field-meta.xml
<CustomField>
    <fullName>RFM_Recency_State_LTD__c</fullName>
    <label>RFM Recency State LTD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RFM_Recency_State</valueSetName>
    </valueSet>
</CustomField>