force-app/main/default/objects/KPI__c/fields/RFM_Total__c.field-meta.xml
<CustomField>
    <fullName>RFM_Total__c</fullName>
    <description>Final customer segment according to RFM segmentation</description>
    <label>RFM - Total</label>
    <length>255</length>
    <type>Text</type>
</CustomField>