force-app/main/default/objects/KPI__c/fields/RFM_Total_points__c.field-meta.xml
<CustomField>
    <fullName>RFM_Total_points__c</fullName>
    <description>RFM General value of the customer according to the RFM segmentation</description>
    <label>RFM Total points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>