force-app/main/default/objects/KPI__c/fields/RTW_High_End_rate__c.field-meta.xml
<CustomField>
    <fullName>RTW_High_End_rate__c</fullName>
    <description>Sum of net quantity sold where “Comm. Category SubGroup” = RTW HIGH END, divided by the total sum of net quantity sold</description>
    <label>% RTW High End</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>