force-app/main/default/objects/KPI__c/fields/Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel__c</fullName>
    <description>Sales channels associated to the customer.</description>
    <label>Sales Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Channel</valueSetName>
    </valueSet>
</CustomField>