force-app/main/default/objects/KPI__c/fields/Sales_rate_as_local__c.field-meta.xml
<CustomField>
    <fullName>Sales_rate_as_local__c</fullName>
    <description>Percentage of sales made locally by the customer compared to his own total sales</description>
    <label>% of sales as local</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>