force-app/main/default/objects/KPI__c/fields/Sales_total_amount_12M__c.field-meta.xml
<CustomField>
    <fullName>Sales_total_amount_12M__c</fullName>
    <description>Total value spent in the last 12 months by the customer (excluding returns)</description>
    <label>Sales total amount 12M</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>