force-app/main/default/objects/KPI__c/fields/Sales_total_amount_historical__c.field-meta.xml
<CustomField>
    <fullName>Sales_total_amount_historical__c</fullName>
    <description>Total value spent overall by the customer (excluding returns)</description>
    <label>Sales total amount historical</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>