force-app/main/default/objects/KPI__c/fields/Sales_total_amount_LY__c.field-meta.xml
<CustomField>
    <fullName>Sales_total_amount_LY__c</fullName>
    <description>Total value spent last year by the customer (excluding returns)</description>
    <label>Sales total amount LY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>