force-app/main/default/objects/KPI__c/fields/Shoes_rate__c.field-meta.xml
<CustomField>
    <fullName>Shoes_rate__c</fullName>
    <description>Sum of net quantity sold where “Comm. Category SubGroup” = SHOES, divided by the total sum of net quantity sold</description>
    <label>% Shoes</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>