force-app/main/default/objects/KPI__c/fields/Spending_tier__c.field-meta.xml
<CustomField>
    <fullName>Spending_tier__c</fullName>
    <description>The customer’s spending category, divided into tiers (e.g., low, medium, high)</description>
    <label>Spending tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>