force-app/main/default/objects/KPI__c/fields/Total_items_quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_items_quantity__c</fullName>
    <description>Total number of items overall purchased by the customer</description>
    <label>Total items quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>