force-app/main/default/objects/KPI__c/fields/Total_number_of_transactions__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_transactions__c</fullName>
    <description>Total number of transactions overall done by the customer (excluding returns)</description>
    <label>Total number of transactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>