force-app/main/default/objects/KPI__c/fields/Variability_of_purchase__c.field-meta.xml
<CustomField>
    <fullName>Variability_of_purchase__c</fullName>
    <description>Variability of  different purchased styles, collection ,seasons</description>
    <label>Variability of purchase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>